Fixed crazy spacing on form

--- a/public/css/nuworldcup.css
+++ b/public/css/nuworldcup.css
@@ -9,7 +9,7 @@
 /* Navbar text #9d9d9d */
 
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300);
-@import url(https://fonts.googleapis.com/css?family=Roboto:300, 700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,700);
 
 html {
   height: 100%;
@@ -359,7 +359,7 @@ iframe {
   /*    margin:auto;*/
   padding: 3rem;
   width: 100%;
-  height: 10488px; /*Specific for 2017 Wicked World Cup*/
+  height: 2930px; /*Specific for new member reg 2019*/
 
   /*    position:relative;;*/
 }
